@@ -1,4 +1,8 @@
-﻿2012-10-05 Nicole Cordes <cordes@cps-it.de>
+﻿2012-11-22 Nicole Cordes <cordes@cps-it.de>
+
+* Added fallback for empty sendername in emails to the email address (before setting it to "powermail")
+
+2012-10-05 Nicole Cordes <cordes@cps-it.de>
 
 	* Added new static template for helper CSS (info icon, error message, date picker)
 	* Fixed Bug #39807: Text truncation if special character is found (Thanks to Thorsten Schneider)
